tweaks for readability, switched to exist.io/oauth2 now CORS header is fixed there too

--- a/exist.css
+++ b/exist.css
@@ -111,10 +111,6 @@ canvas {
     margin-bottom: 16px;
 }
 #exist-range {
-    float: right;
-    clear: both;
-    text-align: right;
-    margin-top: 4px;
     font-size: 14px;
     font-weight: 600;
 }
